# flacplayer

./: .gitignore  CMakeLists.txt  CONVERSION_FEATURE.md  FRAMEWORK_ANALYSIS.md  Flacplayer.pro  QT_LEARNING_GUIDE.md  README.md  audioconverter.cpp  audioconverter.h  audiomanager.cpp  audiomanager.h  compile_commands.json  conversiondialog.cpp  conversiondialog.h  discogsclient.cpp  discogsclient.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_debug.cpp  mainwindow_debug.h  metadataeditor.cpp  metadataeditor.h  metadataeditor.ui  playlist.cpp  playlist.h  post_req.cpp  resources.qrc
backup_files/: audiomanager.cpp  audiomanager.h  mainwindow.cpp.corrupted  mainwindow.h.corrupted  metadataeditor.cpp  metadataeditor.cpp.backup  metadataeditor.h  playlist.cpp  playlist.h
tests/: test_blackbox.cpp  test_boundary.cpp  test_main.cpp  test_mainwindow.cpp  test_playlist.cpp  test_whitebox.cpp
